@@ -1,5 +1,10 @@
 2022-08-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>
 
+	* howm-view.el (howm-view-toggle-uniq): "uniq" is now togglable
+	thx > Andrei Sukhovskii san (qejep at posteo.net)
+
+2022-08-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>
+
 	* howm-view.el (howm-view-filter-methods): revive "uniq" after "f" (filter)
 	thx > Andrei Sukhovskii san (qejep at posteo.net)
 
